--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,12 @@ description = ""
 authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.6"
 pandas = "^0.25.3"
 qgrid = "^1.1.1"
 jupyterlab = "^1.2.4"
 pandas-flavor = "^0.2.0"
+ipywidgets = "7.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
