--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,13 @@ authors = ["Iyed Ghedamsi <iyed.ghdemsi@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-pandas = "^0.25.3"
 qgrid = "^1.1.1"
-jupyterlab = "^1.2.4"
 pandas-flavor = "^0.2.0"
 ipywidgets = "7.5"
+jupyterlab = {version = "^1.2.4", optional = true}
 
 [tool.poetry.dev-dependencies]
+pandas = "^0.25.3"
 pytest = "^5.2"
 
 [build-system]
